--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "concurrently": "^7.6.0",
+    "ember-apollo-client": "^4.1.0",
     "ember-auto-import": "^2.5.0",
     "ember-cli": "~4.10.0",
     "ember-cli-app-version": "^5.0.0",
@@ -55,6 +56,7 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-qunit": "^7.3.4",
+    "graphql": "^15.3.0",
     "loader.js": "^4.7.0",
     "prettier": "^2.8.3",
     "qunit": "^2.19.3",
